--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -9,8 +9,8 @@
 <body>
     <article class="bg-secondary mb-3">
     <div class="jumbotron text-center">
-  <h1 class="display-3">Thank You!</h1>
-  <p class="lead"><strong> Thank you for registering </strong> </p>
+  <h1 class="display-3"> Hurray! Your Reports have been Submitted.</h1>
+  <p class="lead"><strong> It will Be Reviewed by Our Sherlock ! Stay Tuned...... </strong> </p>
   <hr>
   
   <p>
