--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <article class="bg-secondary mb-3">
-    <div class="jumbotron text-center">
-  <h1 class="display-3"> Hurray! Your Reports have been Submitted.</h1>
-  <p class="lead"><strong> It will Be Reviewed by Our Sherlock ! Stay Tuned...... </strong> </p>
+    <div class="jumbotron text-center" style = "background-color: black;
+    color: red;
+    font-family: cursive;">
+  <h3 class="display-3"> Hurray! Your Reports have been Submitted.</h3>
+  <p class="lead"><strong> It will Be Reviewed by Our Sherlock Soon! </strong> </p>
   <hr>
   
   <p>
