--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -16,8 +16,8 @@
     <div class="jumbotron text-center" style = "background-color: black;
     color: red;
     font-family: cursive;">
-  <h3 class="display-3"> Hurray! Your Reports have been Submitted.</h3>
-  <p class="lead"><strong> It will Be Reviewed by Our Sherlock Soon! </strong> </p>
+  <h3 class="display-3"> The event is over.</h3>
+  <p class="lead"><strong> Thankyou! </strong> </p>
   <hr>
   
   <p>
